gson removed, Jlen parser added, now possible to obfuscate (up to 3mb less apk)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="telegram">Переход на канал в Телеграмме</string>
     <string name="video">Переход на Youtube канал</string>
     <string name="app_create2">Сообщить об ошибке, </string>
-    <string name="app_create">Создание, защита приложений</string>
+    <string name="app_create">Создание, защита, экспертиза приложений</string>
     <string name="app_email">E-mail: rxgo@yandex.ru</string>
     <string name="phone_link">+74951207006</string>
     <string name="phone_text">+7 (495) 120-70-06</string>
